[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fund-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.2,<4",
    "python-dotenv>=1.0,<2",
    "pydantic>=2.13,<3",
]

[tool.setuptools.packages.find]
where = ["src"]
